tweaks to fix errors in vscode

--- a/templates/default.mustache
+++ b/templates/default.mustache
@@ -82,7 +82,7 @@
         "sideBarTitle.foreground": "#{{base05-hex}}", //5
 
         // Editor groups and tabs
-        "editorGroup.background": "#{{base00-hex}}", //0
+        "editorGroup.emptyBackground": "#{{base00-hex}}", //0
         // "editorGroup.border": "#f00",
         "editorGroup.dropBackground": "#{{base02-hex}}6f", //2
         "editorGroupHeader.noTabsBackground": "#{{base01-hex}}", //1
@@ -221,8 +221,8 @@
         // "statusBar.noFolderBorder": "",
         "statusBarItem.activeBackground": "#{{base03-hex}}", //3
         "statusBarItem.hoverBackground": "#{{base02-hex}}", //2
-        "statusBarItem.prominentBackground": "#f0f",
-        "statusBarItem.prominentHoverBackground": "#f00",
+        "statusBarItem.prominentBackground": "#{{base0E-hex}}", //E
+        "statusBarItem.prominentHoverBackground": "#{{base08-hex}}", //8
 
         // Title bar colors (macOS)
         "titleBar.activeBackground": "#{{base00-hex}}", //0
@@ -241,17 +241,17 @@
         "notificationLink.foreground": "#{{base0D-hex}}", //D
 
         // Below is no longer supported as of 1.21
-        "notification.background": "#{{base02-hex}}", //2
-        "notification.foreground": "#{{base05-hex}}", //5
-        "notification.buttonBackground": "#{{base0D-hex}}", //D
-        "notification.buttonHoverBackground": "#{{base02-hex}}", //2
-        "notification.buttonForeground": "#{{base07-hex}}", //7
-        "notification.infoBackground": "#{{base0C-hex}}", //C
-        "notification.infoForeground": "#{{base07-hex}}", //7
-        "notification.warningBackground": "#{{base0A-hex}}", //A
-        "notification.warningForeground": "#{{base07-hex}}", //7
-        "notification.errorBackground": "#{{base08-hex}}", //8
-        "notification.errorForeground": "#{{base07-hex}}", //7
+        // "notification.background": "#{{base02-hex}}", //2
+        // "notification.foreground": "#{{base05-hex}}", //5
+        // "notification.buttonBackground": "#{{base0D-hex}}", //D
+        // "notification.buttonHoverBackground": "#{{base02-hex}}", //2
+        // "notification.buttonForeground": "#{{base07-hex}}", //7
+        // "notification.infoBackground": "#{{base0C-hex}}", //C
+        // "notification.infoForeground": "#{{base07-hex}}", //7
+        // "notification.warningBackground": "#{{base0A-hex}}", //A
+        // "notification.warningForeground": "#{{base07-hex}}", //7
+        // "notification.errorBackground": "#{{base08-hex}}", //8
+        // "notification.errorForeground": "#{{base07-hex}}", //7
         // Above is no longer supported as of 1.21
 
         // Extensions
@@ -300,7 +300,7 @@
 
         // Settings editor colors
         "settings.headerForeground": "#{{base05-hex}}", //5
-        "settings.modifiedItemForeground": "#{{base0B-hex}}", //B
+        // "settings.modifiedItemForeground": "#{{base0B-hex}}", //B
         // "settings.inactiveSelectedItemBorder": "",
         "settings.dropdownBackground": "#{{base01-hex}}", //1
         "settings.dropdownForeground": "#{{base05-hex}}", //5
@@ -332,15 +332,15 @@
         "textLink.activeForeground": "#{{base0C-hex}}", //C
         "textLink.foreground": "#{{base0D-hex}}", //D
         "textPreformat.foreground": "#{{base0D-hex}}", //D
-        "textSeparator.foreground": "#f0f"
+        "textSeparator.foreground": "#{{base0E-hex}}" //E
     },
     "tokenColors": [
-        {
-            "settings": {
-                "foreground": "#eeffffff",
-                "background": "#263238ff"
-            }
-        },
+        // {
+        //     "settings": {
+        //         "foreground": "#eeffffff",
+        //         "background": "#263238ff"
+        //     }
+        // },
         {
             "name": "Comment",
             "scope": [
@@ -380,7 +380,7 @@
                 "constant.other.color"
             ],
             "settings": {
-                "foreground": "#0f0"
+                "foreground": "#{{base0B-hex}}" //B
             }
         },
         {
@@ -563,7 +563,7 @@
                 "meta.group.braces.curly constant.other.object.key.js string.unquoted.label.js"
             ],
             "settings": {
-                "fontStyle": "normal",
+                "fontStyle": "",
                 "foreground": "#{{base0B-hex}}" //B
             }
         },
@@ -654,7 +654,7 @@
             ],
             "settings": {
                 "fontStyle": "italic",
-                "foreground": "#82AAFF"
+                "foreground": "#{{base08-hex}}" //8
             }
         },
         {
@@ -779,7 +779,7 @@
             ],
             "settings": {
                 "fontStyle": "italic",
-                "foreground": "#FF5370"
+                "foreground": "#{{base0E-hex}}" //E
             }
         },
         {
@@ -897,7 +897,7 @@
                 "text.html.markdown meta.dummy.line-break"
             ],
             "settings": {
-                "foreground": ""
+                "foreground": "#00000000"
             }
         },
         {
@@ -964,7 +964,7 @@
             ],
             "settings": {
                 "fontStyle": "strike",
-                "foreground": ""
+                // "foreground": ""
             }
         },
         {
@@ -973,7 +973,7 @@
                 "markup.quote punctuation.definition.blockquote.markdown"
             ],
             "settings": {
-                "background": "#{{base0C-hex}}", //C
+                // "background": "#{{base0C-hex}}", //C
                 "foreground": "#{{base0C-hex}}" //C
             }
         },
@@ -984,7 +984,7 @@
             ],
             "settings": {
                 "fontStyle": "italic",
-                "foreground": ""
+                // "foreground": ""
             }
         },
         {
@@ -1048,7 +1048,7 @@
                 "variable.language.fenced.markdown"
             ],
             "settings": {
-                "foreground": "#f0f"
+                "foreground": "#{{base0E-hex}}" //E
             }
         },
         {
@@ -1057,7 +1057,7 @@
                 "variable.language.fenced.markdown"
             ],
             "settings": {
-                "foreground": "#f00"
+                "foreground": "#{{base08-hex}}" //8
             }
         },
         {
@@ -1067,7 +1067,7 @@
             ],
             "settings": {
                 "fontStyle": "bold",
-                "background": "#00000050",
+                // "background": "#00000050",
                 "foreground": "#{{base0C-hex}}" //C
             }
         },
@@ -1077,7 +1077,7 @@
                 "markup.table"
             ],
             "settings": {
-                "foreground": "#f0f"
+                "foreground": "#{{base0E-hex}}" //E
             }
         },
         {
